--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,10 +26,9 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-    </nav>
+      <a class="sidebar-nav-item" href="{{ site.url }}">Home</a>
+      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Education</a>
+      </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
