--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,9 @@
 
       <a class="sidebar-nav-item" href="{{ site.url }}">Home</a>
       <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Education</a>
+      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Publications</a>
+      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Research Porjects</a>
+      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Patents and Softwares</a
       </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
