--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.url }}">
           {{ site.title }}
         </a>
       </h1>
@@ -10,7 +10,8 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <!--
+      <a class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -21,18 +22,20 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | absolute_url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
+      -->
 
       <a class="sidebar-nav-item" href="{{ site.url }}">Home</a>
-      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Education</a>
-      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Publications</a>
-      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Research Porjects</a>
-      <a class="sidebar-nav-item" href="/2020/08/19/Education.html">Patents and Softwares</a
-      </nav>
-
+      <a class="sidebar-nav-item" href="/2020/07/29/Education.html">Education</a>
+      <a class="sidebar-nav-item" href="/2020/07/28/Publications.html">Publications</a>
+      <a class="sidebar-nav-item" href="/2020/07/27/Research-Projects.html">Research Projects</a>
+      <a class="sidebar-nav-item" href="/2020/07/26/Patents.html">Patents and Softwares</a>
+    </nav>
+    
+    <p>&copy; hi</p>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
