--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
       {% endfor %}
       -->
       <a class="sidebar-nav-item" href="{{ site.url }}">Home</a>
-      <a class="sidebar-nav-item" href="2020-08-19-Education.html">Education</a>
+      <a class="sidebar-nav-item" href="2020-08-19-Education.md">Education</a>
       <a class="sidebar-nav-item" href="/2020/07/28/Publications.html">Publications</a>
       <a class="sidebar-nav-item" href="/2020/07/27/Research-Projects.html">Research Projects</a>
       <a class="sidebar-nav-item" href="/2020/07/26/Patents.html">Patents and Softwares</a>
